--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "koa": "2.0.0",
+    "koa-router": "7.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-router-flux": "^3.41.0",
     "react-redux": "^5.0.3",
     "realm": "^1.2.0",
     "redux": "^3.6.0",
@@ -18,9 +21,7 @@
     "redux-persist": "^4.5.0",
     "redux-persist-immutable": "^4.2.0",
     "redux-persist-transform-immutable": "^4.2.0",
-    "redux-thunk": "^2.2.0",
-    "koa": "2.0.0",
-    "koa-router": "7.0.0"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
